# bring-shopping-list-integration

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  main.py  pyproject.toml
.agents/skills/bring-shopping-integration/: SKILL.md
.agents/skills/bring-shopping-integration/agents/: openai.yaml
.agents/skills/bring-shopping-integration/references/: bring-api.md
.github/workflows/: ci.yml  release.yml
deploy/: bootstrap.cmd  bootstrap.ps1  bootstrap.sh  lib.ps1  lib.sh  rotate-capability.cmd  rotate-capability.ps1  rotate-capability.sh  status.cmd  status.ps1  status.sh  update.cmd  update.ps1  update.sh
docs/: architecture.md  chatgpt-pilot.md  deployment.md  release-plan.md  roadmap.md  setup-google-nest.md
docs/adr/: 0001-local-stdio-mcp.md
src/bring_shopping/: __init__.py  cli.py  exceptions.py  http_server.py  mcp_server.py  models.py  service.py  settings.py
tests/: test_cli.py  test_http_server.py  test_mcp_server.py  test_service.py  test_settings.py
tests/live/: __init__.py  test_bring_contract.py
